# workshops

./: .gitignore
rag/: .env.example  README.md  agent.py  download_finance_docs.py  financebench_eval_dataset.py  generation.py  pipeline.py  prepare_dataset.py  pyproject.toml  query_enhancer.py  requirements.txt  response_metrics.py  retrieval_metrics.py  retriever.py  scorers.py  test.py  tools.py  utils.py  workshop.ipynb
rag/prompts/: agent.txt  intent_prediction.txt  qe_system_prompt.txt  search_query.txt  simple_system.txt
