[project]
name = "rag"
version = "0.1.0"
description = "From Simple to Agentic RAG Workshop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bm25s>=0.2.6",
    "crawl4ai>=0.4.247",
    "diskcache>=5.6.3",
    "instructor>=1.7.2",
    "jupyter>=1.1.1",
    "levenshtein>=0.26.1",
    "litellm>=1.57.8",
    "markdown>=3.7",
    "markdownify>=0.14.1",
    "nbconvert>=7.16.5",
    "nbformat>=5.10.4",
    "pathlib>=1.0.1",
    "pinecone[grpc]>=5.4.2",
    "pycryptodome>=3.21.0",
    "pymdown-extensions>=10.14",
    "pypdf2>=3.0.1",
    "pystemmer>=2.2.0.3",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "rerankers[api,gpt,transformers]>=0.6.1",
    "rouge>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "set-env-colab-kaggle-dotenv>=0.1.3",
    "tantivy>=0.22.0",
    "tavily-python>=0.5.0",
    "torch>=2.5.1",
    "transformers>=4.48.0",
    "tree-sitter<=0.21.3",
    "tree-sitter-languages>=1.10.2",
    "weave>=0.51.27",
]

[dependency-groups]
dev = ["black>=24.10.0", "isort>=5.13.2"]
